Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0
-
-
77e7a763ea4ae3e9e3191e0f05fd0bbaf9b090bc (qt/qtmultimedia/dev) feb761ee9f6616a6ea1d61785a1e0aa8b0522d1c (qt/qtmultimedia/6.2) 2afcd6e1b9ddceaf55f4b716c5ac05d88a53c496 (qt/qtmultimedia/6.2.1)
Description
The QML Camera example (declarative-camera) does not work with Boot2Qt image 6.2.0 on Toradex Apalis. It gives an error output:
(declarative-camera:820): GLib-GObject-WARNING **: 10:58:13.374: g_object_set_is_valid_property: object class 'GstQueue' has no property named 'D\x97\xfbf'
And crashes.
https://doc.qt.io/qt-6/qtmultimedia-multimedia-declarative-camera-example.html