Fix a wrong g_object_set() call on 32 bit platforms

The max-size-time property of GstQueue expects a 64 bit
value. Passing in a 32 bit value on 32 bit platforms would
lead to the following nullptr to get mangled in there leading
to bad errors.

Fixes: QTBUG-97379
Pick-to: 6.2 6.2.1
Change-Id: I24c4f6081b5d7eaa6c70d946b5aa9e0a12266da4
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>